# renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shaders.txt
examples/example_alpha_blend/: CMakeLists.txt  main.cpp
examples/example_ambient_occlusion/: CMakeLists.txt  main.cpp
examples/example_msaa/: CMakeLists.txt  main.cpp
examples/example_point_light/: CMakeLists.txt  main.cpp
examples/example_shadow/: CMakeLists.txt  main.cpp
src/: buffer.h  camera.cpp  camera.h  color.cpp  color.h  geometry.cpp  geometry.h  gl.cpp  gl.h  global.h  model.cpp  model.h  texture.cpp  texture.h  tgaimage.cpp  tgaimage.h  triangle.cpp  triangle.h
test/: CMakeLists.txt  tgaimage_test.cpp
